<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <RelativeLayout
        android:id="@+id/rl_loginactivity_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/tv_loginactivity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:text="@string/login_button_login"
            android:textColor="#fff"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_loginactivity_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/login_button_register"
            android:textColor="#fff"
            android:textSize="20dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_loginactivity_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/rl_loginactivity_top"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_loginactivity_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_texttitle_username"/>
            <EditText
                android:id="@+id/et_loginactivity_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_username"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                    android:id="@+id/tv_loginactivity_password"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_texttitle_password"
                    android:textAlignment="inherit"/>
            <EditText
                android:id="@+id/et_loginactivity_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_loginactivity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_loginactivity_two"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/login_button_login"
        android:textColor="#fff"
        android:textSize="18dp"
        android:gravity="center"
        android:onClick="onClick"
        android:background="@color/colorPrimary"
        />

</RelativeLayout>